recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:11: error: reassignment to val
	if(l.size<n) n=l.size;
                      ^